--- a/.github/workflows/build_on_windows.yml
+++ b/.github/workflows/build_on_windows.yml
@@ -37,34 +37,29 @@ jobs:
 
       # WINDOWS
       - name: Cache conan packages part 1
-        if: startsWith(matrix.os, 'windows')
         uses: actions/cache@v3
         with:
           key: ${{ runner.os }}-conan-user-${{ hashFiles('**/conanfile.txt') }}
           path:  ~/.conan/
 
       - name: Cache conan packages part 2
-        if: startsWith(matrix.os, 'windows')
         uses: actions/cache@v3
         with:
           key: ${{ runner.os }}-conan-root-${{ hashFiles('**/conanfile.txt') }}
           path: C:/.conan/
 
       - name: Add Conan to path
-        if: startsWith(matrix.os, 'windows')
         run: echo "C:\Program Files\Conan\conan\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Install dependencies (Windows)
-        if: startsWith(matrix.os, 'windows')
         run: |
           choco install conan -y
 
       - name: Enable Developer Command Prompt
-        if: startsWith(matrix.os, 'windows')
         uses: ilammy/msvc-dev-cmd@v1.10.0
 
       - name: Build (Windows)
-        if: startsWith(matrix.os, 'windows') && matrix.build-system == 'qmake'
+        if: matrix.build-system == 'qmake'
         run: |
           mkdir build
           cd build
@@ -78,7 +73,7 @@ jobs:
           7z a chatterino-windows-x86-64.zip Chatterino2/
 
       - name: Build with CMake (Windows)
-        if: startsWith(matrix.os, 'windows') && matrix.build-system == 'cmake'
+        if: matrix.build-system == 'cmake'
         run: |
           mkdir build
           cd build
@@ -91,13 +86,11 @@ jobs:
           echo nightly > Chatterino2/modes
           7z a chatterino-windows-x86-64.zip Chatterino2/
       - name: Upload artifact (Windows)
-        if: startsWith(matrix.os, 'windows')
         uses: actions/upload-artifact@v3
         with:
           name: chatterino-windows-x86-64-${{ matrix.qt-version }}-${{ matrix.build-system }}.zip
           path: build/chatterino-windows-x86-64.zip
 
       - name: Clean Conan pkgs
-        if: startsWith(matrix.os, 'windows')
         run: conan remove "*" -fsb
         shell: bash
