fix(action): update needs of create-release to depend on step jobs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,12 @@ jobs:
     uses: ./.github/workflows/build-steps-linux.yml
 
   create-release:
-    needs: build
     runs-on: ubuntu-latest
     if: (github.event_name == 'push' && github.ref == 'refs/heads/master')
+    needs:
+      - build-windows
+      - build-macos
+      - build-linux
 
     steps:
       - name: Create release
