--- a/.github/workflows/build-steps-windows.yml
+++ b/.github/workflows/build-steps-windows.yml
@@ -35,7 +35,13 @@ jobs:
           path: "${{ github.workspace }}/qt/"
           key: ${{ runner.os }}-QtCache-${{ matrix.qt-version }}
 
-      # WINDOWS
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v2
+        with:
+          cached: ${{ steps.cache-qt.outputs.cache-hit }}
+          version: ${{ matrix.qt-version }}
+          dir: "${{ github.workspace }}/qt/"
+
       - name: Cache conan packages part 1
         uses: actions/cache@v3
         with:
