fix(action): reinstate conditionals for build systems

--- a/.github/workflows/build-steps-linux.yml
+++ b/.github/workflows/build-steps-linux.yml
@@ -66,6 +66,7 @@ jobs:
               libxcb-render-util0 \
               libxcb-xinerama0
       - name: Build (Ubuntu)
+        if: matrix.build-system == 'qmake'
         run: |
           mkdir build
           cd build
@@ -74,6 +75,7 @@ jobs:
         shell: bash
 
       - name: Build with CMake (Ubuntu)
+        if: matrix.build-system == 'cmake'
         run: |
           mkdir build
           cd build
