feat: improve @Mm2PL's CI splitting work (#3631)
Co-authored-by: Rasmus Karlsson <rasmus.karlsson@pajlada.com>
Co-authored-by: Paweł <zneix@zneix.eu>
Co-authored-by: Leon Richardt <leon.richardt@gmail.com>
Co-authored-by: pajlada <rasmus.karlsson@pajlada.com>
Co-authored-by: Felanbird <41973452+Felanbird@users.noreply.github.com>
Co-authored-by: James Upjohn <jammehcow@jammehcow.co.nz>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: qooq69 <52359859+qooq69@users.noreply.github.com>
Co-authored-by: karl-police <karl-police2001@bluewin.ch>
Co-authored-by: Patrick Geneva <goldbattle@users.noreply.github.com>
Co-authored-by: Infinitay <Infinitay@users.noreply.github.com>
Co-authored-by: Mm2PL <miau@mail.kotmisia.pl>
Co-authored-by: LosFarmosCTL <80157503+LosFarmosCTL@users.noreply.github.com>
Co-authored-by: ooxi <violetland@mail.ru>
Co-authored-by: Edgar <Edgar@AnotherFoxGuy.com>
Co-authored-by: Brian <18603393+brian6932@users.noreply.github.com>
Co-authored-by: oldLucke <oldlucke@gmail.com>
Co-authored-by: nerix <nero.9@hotmail.de>

--- a/.github/workflows/build-steps-linux.yml
+++ b/.github/workflows/build-steps-linux.yml
@@ -2,10 +2,7 @@
 name: Build on Linux
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
+  workflow_call:
 
 jobs:
   build:
@@ -33,84 +30,81 @@ jobs:
           path: ../Qt
           key: ubuntu-latest-QtCache-${{ matrix.qt-version }}-20210109
 
-      # LINUX
       - name: Install p7zip (Ubuntu)
         run: sudo apt-get update && sudo apt-get -y install p7zip-full
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v2
         with:
-          aqtversion: '==1.1.1'
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
-          extra: --external 7z
           version: ${{ matrix.qt-version }}
+          dir: "${{ github.workspace }}/qt/"
 
       - name: Install dependencies (Ubuntu)
         run: |
-            sudo apt-get update
-            sudo apt-get -y install \
-                cmake \
-                virtualenv \
-                rapidjson-dev \
-                libssl-dev \
-                libboost-dev \
-                libxcb-randr0-dev \
-                libboost-system-dev \
-                libboost-filesystem-dev \
-                libpulse-dev \
-                libxkbcommon-x11-0 \
-                libgstreamer-plugins-base1.0-0 \
-                build-essential \
-                libgl1-mesa-dev \
-                libxcb-icccm4 \
-                libxcb-image0 \
-                libxcb-keysyms1 \
-                libxcb-render-util0 \
-                libxcb-xinerama0
-
+          sudo apt-get update
+          sudo apt-get -y install \
+              cmake \
+              virtualenv \
+              rapidjson-dev \
+              libssl-dev \
+              libboost-dev \
+              libxcb-randr0-dev \
+              libboost-system-dev \
+              libboost-filesystem-dev \
+              libpulse-dev \
+              libxkbcommon-x11-0 \
+              libgstreamer-plugins-base1.0-0 \
+              build-essential \
+              libgl1-mesa-dev \
+              libxcb-icccm4 \
+              libxcb-image0 \
+              libxcb-keysyms1 \
+              libxcb-render-util0 \
+              libxcb-xinerama0
       - name: Build (Ubuntu)
         if: matrix.build-system == 'qmake'
         run: |
-            mkdir build
-            cd build
-            qmake PREFIX=/usr ..
-            make -j8
+          mkdir build
+          cd build
+          qmake PREFIX=/usr ..
+          make -j$(nproc)
         shell: bash
 
       - name: Build with CMake (Ubuntu)
         if: matrix.build-system == 'cmake'
         run: |
-            mkdir build
-            cd build
-            cmake \
-              -DCMAKE_INSTALL_PREFIX=appdir/usr/ \
-              -DCMAKE_BUILD_TYPE=Release \
-              -DPAJLADA_SETTINGS_USE_BOOST_FILESYSTEM=On \
-              -DUSE_PRECOMPILED_HEADERS=${{ matrix.pch }} \
-              ..
-            make -j8
+          mkdir build
+          cd build
+          cmake \
+            -DCMAKE_INSTALL_PREFIX=appdir/usr/ \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DPAJLADA_SETTINGS_USE_BOOST_FILESYSTEM=On \
+            -DUSE_PRECOMPILED_HEADERS=${{ matrix.pch }} \
+            ..
+          make -j$(nproc)
         shell: bash
 
       - name: Package - AppImage (Ubuntu)
         run: |
-            cd build
-            sh ./../.CI/CreateAppImage.sh
+          cd build
+          sh ./../.CI/CreateAppImage.sh
         shell: bash
 
       - name: Package - .deb (Ubuntu)
         run: |
-            cd build
-            sh ./../.CI/CreateUbuntuDeb.sh
+          cd build
+          sh ./../.CI/CreateUbuntuDeb.sh
         shell: bash
 
       - name: Upload artifact - AppImage (Ubuntu)
-        uses: actions/upload-artifact@v2.3.1
+        uses: actions/upload-artifact@v3
         with:
           name: Chatterino-x86_64-${{ matrix.qt-version }}-${{ matrix.build-system }}.AppImage
           path: build/Chatterino-x86_64.AppImage
 
       - name: Upload artifact - .deb (Ubuntu)
-        uses: actions/upload-artifact@v2.3.1
+        uses: actions/upload-artifact@v3
         with:
           name: Chatterino-${{ matrix.qt-version }}-${{ matrix.build-system }}.deb
           path: build/Chatterino.deb
