--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,169 +8,22 @@ on:
   pull_request:
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-latest, macos-latest]
-        qt-version: [5.15.2, 5.12.10]
-        build-system: [qmake, cmake]
-        pch: [true]
-        exclude:
-          - os: windows-latest
-            qt-version: 5.12.10
-            build-system: cmake
-            pch: true
-        include:
-          - os: windows-2016
-            qt-version: 5.12.10
-            build-system: cmake
-            pch: true
-          - os: ubuntu-latest
-            qt-version: 5.15.2
-            build-system: cmake
-            pch: false
-      fail-fast: false
+  build-windows:
+    uses: ./.github/workflows/build-steps-windows.yml
 
-    steps:
-      - name: Set environment variables for windows-latest
-        if: matrix.os == 'windows-latest'
-        run: |
-            echo "vs_version=2019" >> $GITHUB_ENV
-        shell: bash
+  build-macos:
+    uses: ./.github/workflows/build-steps-macos.yml
 
-      - name: Set environment variables for windows-2016
-        if: matrix.os == 'windows-2016'
-        run: |
-            echo "vs_version=2017" >> $GITHUB_ENV
-        shell: bash
-
-      - uses: actions/checkout@v2.4.0
-        with:
-          submodules: true
-          fetch-depth: 0  # allows for tags access
-
-      - name: Cache Qt
-        id: cache-qt
-        uses: actions/cache@v2.1.7
-        with:
-          path: ../Qt
-          key: ${{ runner.os }}-QtCache-${{ matrix.qt-version }}-20210109
-
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v2
-        with:
-          aqtversion: '==1.1.1'
-          cached: ${{ steps.cache-qt.outputs.cache-hit }}
-          extra: --external 7z
-          version: ${{ matrix.qt-version }}
-
-      # WINDOWS
-      - name: Cache conan packages
-        if: startsWith(matrix.os, 'windows')
-        uses: actions/cache@v2.1.7
-        with:
-          key: ${{ runner.os }}-conan-${{ hashFiles('**/conanfile.txt') }}-20210412
-          path: C:/.conan/
-
-      - name: Add Conan to path
-        if: startsWith(matrix.os, 'windows')
-        run: echo "C:\Program Files\Conan\conan\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        
-      - name: Install dependencies (Windows)
-        if: startsWith(matrix.os, 'windows')
-        run: |
-            choco install conan -y
-        
-      - name: Enable Developer Command Prompt
-        if: startsWith(matrix.os, 'windows')
-        uses: ilammy/msvc-dev-cmd@v1.10.0
-
-      - name: Build (Windows)
-        if: startsWith(matrix.os, 'windows') && matrix.build-system == 'qmake'
-        run: |
-            mkdir build
-            cd build
-            conan install ..
-            qmake ..
-            set cl=/MP
-            nmake /S /NOLOGO
-            windeployqt release/chatterino.exe --release --no-compiler-runtime --no-translations --no-opengl-sw --dir Chatterino2/
-            cp release/chatterino.exe Chatterino2/
-            echo nightly > Chatterino2/modes
-            7z a chatterino-windows-x86-64.zip Chatterino2/
-            
-      - name: Build with CMake (Windows)
-        if: startsWith(matrix.os, 'windows') && matrix.build-system == 'cmake'
-        run: |
-            mkdir build
-            cd build
-            conan install ..
-            cmake -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=Release -DUSE_CONAN=ON ..
-            set cl=/MP
-            nmake /S /NOLOGO
-            windeployqt bin/chatterino.exe --release --no-compiler-runtime --no-translations --no-opengl-sw --dir Chatterino2/
-            cp bin/chatterino.exe Chatterino2/
-            echo nightly > Chatterino2/modes
-            7z a chatterino-windows-x86-64.zip Chatterino2/
-
-      - name: Upload artifact (Windows)
-        if: startsWith(matrix.os, 'windows')
-        uses: actions/upload-artifact@v2.3.1
-        with:
-          name: chatterino-windows-x86-64-${{ matrix.qt-version }}-${{ matrix.build-system }}.zip
-          path: build/chatterino-windows-x86-64.zip
-
-      # MACOS
-      - name: Install dependencies (MacOS)
-        if: startsWith(matrix.os, 'macos')
-        run: |
-            brew install boost openssl rapidjson p7zip create-dmg cmake tree
-        shell: bash
-
-      - name: Build (MacOS)
-        if: startsWith(matrix.os, 'macos') && matrix.build-system == 'qmake'
-        run: |
-            mkdir build
-            cd build
-            $Qt5_DIR/bin/qmake .. DEFINES+=$dateOfBuild
-            make -j8
-        shell: bash
-
-      - name: Build with CMake (MacOS)
-        if: startsWith(matrix.os, 'macos') && matrix.build-system == 'cmake'
-        run: |
-            mkdir build
-            cd build
-            cmake \
-                -DCMAKE_BUILD_TYPE=Release \
-                -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl \
-                -DUSE_PRECOMPILED_HEADERS=${{ matrix.pch }} \
-                ..
-            make -j8
-        shell: bash
-
-      - name: Package (MacOS)
-        if: startsWith(matrix.os, 'macos')
-        run: |
-            ls -la
-            pwd
-            ls -la build || true
-            cd build
-            sh ./../.CI/CreateDMG.sh
-        shell: bash
-
-      - name: Upload artifact (MacOS)
-        if: startsWith(matrix.os, 'macos')
-        uses: actions/upload-artifact@v2.3.1
-        with:
-          name: chatterino-osx-${{ matrix.qt-version }}-${{ matrix.build-system }}.dmg
-          path: build/chatterino-osx.dmg
+  build-linux:
+    uses: ./.github/workflows/build-steps-linux.yml
 
   create-release:
-    needs: build
     runs-on: ubuntu-latest
     if: (github.event_name == 'push' && github.ref == 'refs/heads/master')
+    needs:
+      - build-windows
+      - build-macos
+      - build-linux
 
     steps:
       - name: Create release
@@ -183,45 +36,45 @@ jobs:
           backup_tag_name: backup-nightly-build
           release_name: Nightly Release
           body: |
-              Nightly Build
+            Nightly Build
           prerelease: true
 
-      - uses: actions/download-artifact@v2.1.0
+      - uses: actions/download-artifact@v3
         with:
           name: chatterino-windows-x86-64-5.15.2-qmake.zip
           path: windows/
 
-      - uses: actions/download-artifact@v2.1.0
+      - uses: actions/download-artifact@v3
         with:
           name: chatterino-windows-x86-64-5.15.2-cmake.zip
           path: windows-cmake/
 
-      - uses: actions/download-artifact@v2.1.0
+      - uses: actions/download-artifact@v3
         with:
           name: Chatterino-x86_64-5.15.2-qmake.AppImage
           path: linux/
 
-      - uses: actions/download-artifact@v2.1.0
+      - uses: actions/download-artifact@v3
         with:
           name: Chatterino-x86_64-5.15.2-cmake.AppImage
           path: linux-cmake/
 
-      - uses: actions/download-artifact@v2.1.0
+      - uses: actions/download-artifact@v3
         with:
           name: Chatterino-5.15.2-qmake.deb
           path: ubuntu/
 
-      - uses: actions/download-artifact@v2.1.0
+      - uses: actions/download-artifact@v3
         with:
           name: Chatterino-5.15.2-cmake.deb
           path: ubuntu-cmake/
 
-      - uses: actions/download-artifact@v2.1.0
+      - uses: actions/download-artifact@v3
         with:
           name: chatterino-osx-5.15.2-qmake.dmg
           path: macos/
 
-      - uses: actions/download-artifact@v2.1.0
+      - uses: actions/download-artifact@v3
         with:
           name: chatterino-osx-5.15.2-cmake.dmg
           path: macos-cmake/
