--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -244,6 +244,22 @@ jobs:
           name: chatterino-osx-${{ matrix.qt-version }}-${{ matrix.build-system }}.dmg
           path: build/chatterino-osx.dmg
 
+  build-vcpkg:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest]
+      fail-fast: false
+    steps:
+      - name: Dependencies
+        run: vcpkg install benchmark boost-foreach boost-interprocess boost-random boost-variant gtest openssl qt5-multimedia qtkeychain rapidjson websocketpp wintoast
+      - name: Build
+        run: |
+            mkdir build
+            cd build
+            cmake .. -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake"
+            cmake --build . --config Release
+
   create-release:
     needs: build
     runs-on: ubuntu-latest
