--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -251,13 +251,20 @@ jobs:
         os: [windows-latest]
       fail-fast: false
     steps:
+      - name: Set environment variables
+        run: echo "VCPKG_DEFAULT_TRIPLET=x64-windows" >> $env:GITHUB_ENV
+      - name: Cache Dependencies
+        uses: actions/cache@v3
+        with:
+          path: "C:/vcpkg"
+          key: ${{ runner.os }}-vcpkg-${{ hashFiles('**/vcpkg.json') }}
       - name: Dependencies
-        run: vcpkg install benchmark boost-foreach boost-interprocess boost-random boost-variant gtest openssl qt5-multimedia qtkeychain rapidjson websocketpp wintoast
+        run: vcpkg install
       - name: Build
         run: |
             mkdir build
             cd build
-            cmake .. -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake"
+            cmake .. -DCMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake"
             cmake --build . --config Release
 
   create-release:
