auto build test 3

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -251,6 +251,10 @@ jobs:
         os: [windows-latest]
       fail-fast: false
     steps:
+      - name: Where am I?
+        run: |
+            echo $pwd
+            ls
       - name: Set environment variables
         run: echo "VCPKG_DEFAULT_TRIPLET=x64-windows" >> $env:GITHUB_ENV
       - name: Cache Dependencies
