--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -255,7 +255,6 @@ jobs:
         run: |
             echo "VCPKG_DEFAULT_TRIPLET=x64-windows" >> $env:GITHUB_ENV
             echo "VCPKG_FEATURE_FLAGS=binarycaching" >> $env:GITHUB_ENV
-            echo "XDG_CACHE_HOME=C:/cache/" >> $env:GITHUB_ENV
       - uses: actions/checkout@v3
         with:
           submodules: true
@@ -263,7 +262,7 @@ jobs:
       - name: Cache Dependencies
         uses: actions/cache@v3
         with:
-          path: C:/cache/
+          path: ${{ env.LOCALAPPDATA }}/vcpkg/archives
           key: ${{ runner.os }}-vcpkg-archive-${{ hashFiles('**/vcpkg.json') }}
       - name: Dependencies
         run: vcpkg install
