Move each pubsub message to its own file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -242,6 +242,13 @@ set(SOURCE_FILES
         providers/twitch/TwitchUser.cpp
         providers/twitch/TwitchUser.hpp
 
+        providers/twitch/pubsubmessages/AutoMod.hpp
+        providers/twitch/pubsubmessages/Base.hpp
+        providers/twitch/pubsubmessages/ChannelPoints.hpp
+        providers/twitch/pubsubmessages/ChatModeratorAction.hpp
+        providers/twitch/pubsubmessages/Message.hpp
+        providers/twitch/pubsubmessages/Whisper.hpp
+
         providers/twitch/api/Helix.cpp
         providers/twitch/api/Helix.hpp
 
