--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,9 @@ name: Test
 on:
   pull_request:
 
+env:
+  TWITCH_PUBSUB_SERVER_IMAGE: ghcr.io/chatterino/twitch-pubsub-server-test:v1.0.3
+
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -77,8 +80,8 @@ jobs:
       - name: Test (Ubuntu)
         if: startsWith(matrix.os, 'ubuntu')
         run: |
-            docker pull ghcr.io/chatterino/twitch-pubsub-server-test:v1.0.2
-            docker run --network=host --detach ghcr.io/chatterino/twitch-pubsub-server-test:v1.0.2
+            docker pull ${{ env.TWITCH_PUBSUB_SERVER_IMAGE }}
+            docker run --network=host --detach ${{ env.TWITCH_PUBSUB_SERVER_IMAGE }}
             ./bin/chatterino-test --platform minimal
         working-directory: build-test
         shell: bash
