Fix: ignore whitespaces pasted in EmotePopup search

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -422,6 +422,8 @@ set(SOURCE_FILES
         widgets/helper/QColorPicker.hpp
         widgets/helper/RegExpItemDelegate.cpp
         widgets/helper/RegExpItemDelegate.hpp
+        widgets/helper/TrimRegExpValidator.cpp
+        widgets/helper/TrimRegExpValidator.hpp
         widgets/helper/ResizingTextEdit.cpp
         widgets/helper/ResizingTextEdit.hpp
         widgets/helper/ScrollbarHighlight.cpp
