--- a/.github/workflows/check-formatting.yml
+++ b/.github/workflows/check-formatting.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
 
 concurrency: 
-  group: ${{ github.ref }}
+  group: check-formatting-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
