--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -249,6 +249,8 @@ set(SOURCE_FILES
         providers/twitch/pubsubmessages/ChannelPoints.hpp
         providers/twitch/pubsubmessages/ChatModeratorAction.cpp
         providers/twitch/pubsubmessages/ChatModeratorAction.hpp
+		providers/twitch/pubsubmessages/ChatroomsUser.cpp
+		providers/twitch/pubsubmessages/ChatroomsUser.hpp
         providers/twitch/pubsubmessages/Listen.cpp
         providers/twitch/pubsubmessages/Listen.hpp
         providers/twitch/pubsubmessages/Message.hpp
