Correct GIT_MODIFIED variable
add a qmake variant as well since it involves basically no hassle

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -635,6 +635,7 @@ target_compile_definitions(${LIBRARY_PROJECT} PUBLIC
     CHATTERINO_GIT_HASH=\"${GIT_HASH}\"
     CHATTERINO_GIT_RELEASE=\"${GIT_RELEASE}\"
     CHATTERINO_GIT_COMMIT=\"${GIT_COMMIT}\"
+    CHATTERINO_GIT_MODIFIED=\"${GIT_MODIFIED}\"
 
     CHATTERINO_CMAKE_GEN_DATE=\"${cmake_gen_date}\"
     )
