--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -4,6 +4,7 @@ set(benchmark_SOURCES
     ${CMAKE_CURRENT_LIST_DIR}/src/main.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/Emojis.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/FormatTime.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/LimitedQueue.cpp
     # Add your new file above this line!
     )
 
