Organized version information (#3781)
added new `GIT_MODIFIED` variable - used to determine whether the vcs tree was compiled or not at the time of building the app
added information about running in DEBUG mode which might be very helpful to determine whether one is running a DEBUG build, e.g. in the process of troubleshooting/determining crash causes

Co-authored-by: Rasmus Karlsson <rasmus.karlsson@pajlada.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -638,6 +638,11 @@ target_compile_definitions(${LIBRARY_PROJECT} PUBLIC
 
     CHATTERINO_CMAKE_GEN_DATE=\"${cmake_gen_date}\"
     )
+if (GIT_MODIFIED)
+    target_compile_definitions(${LIBRARY_PROJECT} PUBLIC
+        CHATTERINO_GIT_MODIFIED
+        )
+endif ()
 if (USE_SYSTEM_QTKEYCHAIN)
     target_compile_definitions(${LIBRARY_PROJECT} PUBLIC
         CMAKE_BUILD
